# FSP

./: .gitignore  Architecture.md  FSP.sln  FSP_ClientServer_VS8.sln  FSP_FileSync.sln  FSP_FileSyncX64.sln  FSP_VPN.sln  FSP_VS8.sln  FSP_vs8_SynClient.sln  FSPmt.sln  FSPx64.sln  FileSyncServer.sln  README.md  UNITTEST_FSP.sln
KeccakReferenceAndOptimized/: KeccakOptimized32.vcxproj
KeccakReferenceAndOptimized/Sources/: KeccakNISTInterface.h
src/: CMakeLists.txt  ControlBlock.cpp  FSP.h  FSP.sln  FSP_API.h  FSP_ClientServer.sln  FSP_FileSync.sln  FSP_FileSyncX64.sln  FSP_Impl.h  Intrins.h  Requirement.txt  TEST_FSP.sln  UNITTEST_FSP.sln  Why FSP.txt  endian.h  gcm-aes.c  gcm-aes.h  vmac.c  vmac.h
src/CSharpAPI/: CSharpAPI.csproj  FSPAPI.cs  Program.cs
src/CSharpAPI/Properties/: AssemblyInfo.cs  Settings.Designer.cs
src/Crypto/: CHAKA.h  CryptoStub.c  CryptoStub.h  rsa-gmp.cpp  sha256.h  sm3.c  tweetnacl.c
src/FSP_DLL/: CMakeLists.txt  CMakeSettings.json  CryptoStub.c  Deflate.cpp  Disconnect.cpp  DllEntry.cpp  Establish.cpp  FSP_DLL.h  FSP_DLL.vcproj  FSP_DLL.vcxproj  FSP_DLL.vcxproj.filters  FSP_DLLx32.vcxproj  FSP_DLLx64.vcxproj  FSP_DLLx64.vcxproj.filters  FSP_mtDLL.vcproj  FSP_mtDLL.vcxproj  FSP_mtDLL.vcxproj.filters  IOControl.cpp  LibEntry.cpp  Multihome.cpp  Multiplex.cpp  Receive.cpp  Send.cpp  SlimThreadPool.cpp  rsa-gmp.hpp  rsassa-pss.cpp  rsassa-pss.h
src/FSP_DllTest/: FSP_DllTest.cpp  FSP_DllTest.vcxproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/FSP_FlowTest/: FSP_FlowTest.cpp  FSP_FlowTest.vcxproj  FSP_FlowTest.vcxproj.filters  ReadMe.txt  Test_FlowControl.cpp  Test_Timers.cpp  Test_TryCHAKA.cpp  Test_TryCHAKE.cpp  Test_TrySRP.cpp  Test_TryWideChar.cpp  stdafx.cpp  stdafx.h
src/FSP_HGW/: RequestPool.cpp  SOCKSv5.cpp  defs.h  errstrs.hpp  fcgi.cpp  fsp_hgw.vcxproj  fsp_http.h  fspgate.vcxproj  fspgate.vcxproj.filters  httpd.cpp  sockscon.cpp  tunnel.cpp
src/FSP_IPv6Preconfig/: FSP_IPv6Preconfig.cpp  FSP_IPv6Preconfig.vcxproj  FSP_IPv6Preconfig.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/FSP_SRV/: CMakeLists.txt  CRC64.c  CubicRoot.c  FSP_SRV.h  FSP_SRV.vcproj  FSP_SRV.vcxproj  FSP_SRV.vcxproj.filters  FSP_SRVx32.vcxproj  FSP_SRVx64.vcxproj  FSP_SRVx64.vcxproj.filters  FSP_mtSRV.vcproj  FSP_mtSRV.vcxproj  FSP_mtSRV.vcxproj.filters  ae.h  blake2b.c  blake2b.h  command.cpp  ecn_rc_cm.h  gcm-aes.c  gcm-aes.h  main.cpp  mobile.cpp  ocb.c  os_linux.cpp  os_win.cpp  remote.cpp  rijndael-alg-fst.h  socket.cpp  timers.cpp  vmac_ae.c  vmac_ae.h
src/FSP_Sciter/: FSP_Download.cpp  FSP_Sciter.cpp  FSP_Sciter.vcxproj  readme.txt
src/FileSyncClient/: FSP_CHAKA.cpp  FileSyncClient.cpp  FileSyncClient.vcxproj  FileSyncClientX64.vcxproj  FileSyncClient_VS8.vcproj  FileSyncClient_vs10.vcxproj  FileSyncClient_vs10.vcxproj.filters  MemoryFile.cpp  ReceiveOOB.cpp  stdafx.cpp  stdafx.h
src/FileSyncServer/: CHAKA.h  EncryptedMemory.cpp  FileSyncServer.cpp  FileSyncServer.vcxproj  FileSyncServerX64.vcxproj  FileSyncServer_VS10.vcxproj  FileSyncServer_VS8.vcproj  MemoryFile.cpp  SignatureOOB.cpp  SimpleAWS.cpp  TestFSP_Server.cpp  defs.h  stdafx.cpp  stdafx.h
src/RawMemoryClient/: MemoryFile.cpp  RawMemoryClient.cpp  RawMemoryClient.vcxproj  stdafx.h
src/RawMemoryServer/: MemoryFile.cpp  RawMemoryServer.cpp  RawMemoryServer.vcxproj  stdafx.h
src/SHA3/: KeccakHash.h  KeccakNISTInterface.c  KeccakNISTInterface.h
src/Test_HGW/: TestHGW.cpp  Test_HGW.vcxproj  UnitTest.cpp  stdafx.h
src/UnitTestFSP/: FSP_TestClass.h  LinuxMQ.cpp  LinuxNetIf.cpp  LinuxRTS.cpp  LinuxSHM.cpp  LinuxSeqSock.cpp  LinuxSocket.cpp  LinuxThread.cpp  LinuxTimers.cpp  UnitTestFSP.h  UnitTestFSP.vcxproj  UnitTestFSP.vcxproj.filters  UnitTestFSPx64.vcxproj  UnitTestOnLinux.cpp  UnitTestSNACK.cpp  XSIMQ.cpp  stdafx.cpp  stdafx.h  targetver.h  unittest1.cpp
